--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,5 +27,8 @@ jobs:
       - name: Unit-test the app
         run: ng test
         
+      - name: Update WebDriver
+        run: npm run webdriver-update
+        
       - name: E2E test the app
         run: ng e2e
