--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,5 +27,14 @@ jobs:
       - name: Unit-test the app
         run: ng test
         
+      - name: Install Protractor
+        run: npm install protractor --save-dev
+        
+      - name: Update Webdriver
+        run: npm webdriver-manager update
+        
+      - name: Start webdriver
+        run: npm webdriver-manager start
+        
       - name: E2E test the app
         run: ng e2e
