--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,15 +10,8 @@ jobs:
     runs-on: self-hosted
     
     steps:
-      - name: Stop and Delete existing Docker container
-        run: |
-          docker stop project4-container || true
-          docker rm project4-container || true
-      - name: Delete existing Docker image
-        run: |
-          docker rmi project4-image || true
-          
       - uses: actions/checkout@v3
+      
       - uses: actions/setup-node@v3
         with: 
           node-version: 14
@@ -43,11 +36,11 @@ jobs:
       - name: E2E test the app
         run: ng e2e
         
-      - name: Build Docker image
-        run: docker build -t project4-image .
+      - name: Build Docker 
+        run: docker build -t project4 .
         
       - name: Run Docker container 
-        run: docker run -d -p 4200:4200 --name project4-container project4-image
+        run: docker run -d -p 4200:4200 project4
         
       - name: Wait for application to start
         run: sleep 10
