--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
   
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: ubuntu-20.04
     
     steps:
       - uses: actions/checkout@v3
@@ -35,9 +35,3 @@ jobs:
         
       - name: E2E test the app
         run: ng e2e
-        
-      - name: Build Docker 
-        run: docker build -t project4 .
-        
-      - name: Run Docker container 
-        run: docker run -d -p 4200:4200 project4
